--- a/media-pag.html
+++ b/media-pag.html
@@ -21,6 +21,16 @@
   </head>
   <!-- /head -->
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TP379MH2E3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TP379MH2E3');
+</script>
+
   <!-- body -->
   <body class="bg--dark">
     <header id="header" >
